--- a/Configuration/github/配置.md
+++ b/Configuration/github/配置.md
@@ -34,5 +34,5 @@ File causing error:
 	origin	git@github.com:kkk-a11yy/Obsidian-CS.git (push)
 	```
 
-
+- [github - Git fatal: bad object refs/heads 2/master - Stack Overflow](https://stackoverflow.com/questions/72515916/git-fatal-bad-object-refs-heads-2-master)
 
